The Great 1.21.1 Cleanup • Removed a lot of unnecessary stuff • Added more methods to BlockEntityUtils • Converted more blocks to use components • Added item tags to allow other mods and datapacks to add recipes • Cleaned up the custom components CookingComponent and SingleCookingComponent