@@ -1,12 +1,10 @@
 package dev.toasttextures.cookit.block.entity;
 
-
 import dev.toasttextures.cookit.recipes.RecipeInventory;
-import dev.toasttextures.cookit.registries.CookItComponents;
-import dev.toasttextures.cookit.registries.OilParticleEffect;
+import dev.toasttextures.cookit.registry.CookItComponents;
+import dev.toasttextures.cookit.registry.OilParticleEffect;
+import dev.toasttextures.cookit.registry.component.SingleCookingComponent;
 import net.minecraft.block.BlockState;
-import net.minecraft.component.ComponentMap;
-import net.minecraft.inventory.Inventories;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.NbtCompound;
 import net.minecraft.recipe.RecipeEntry;
@@ -19,16 +17,14 @@ import net.minecraft.world.World;
 import dev.toasttextures.cookit.block.ImplementedInventory;
 import dev.toasttextures.cookit.item.FryerBasket;
 import dev.toasttextures.cookit.recipes.FryerRecipe;
-import dev.toasttextures.cookit.registries.CookItBlockEntities;
+import dev.toasttextures.cookit.registry.CookItBlockEntities;
 
 import java.util.*;
 
 import static dev.toasttextures.cookit.block.appliances.Fryer.ON;
 
-
 public class FryerEntity extends CookingBlockEntity implements ImplementedInventory {
-    private static final int Fryer_SOUND_INTERVAL = 111;
-    int progress = 0;
+    private int progress = 0;
     private int maxProgress = 0;
 
     public FryerEntity(BlockPos pos, BlockState state) {
@@ -37,17 +33,13 @@ public class FryerEntity extends CookingBlockEntity implements ImplementedInvent
 
     @Override
     public void readNbt(NbtCompound nbt, RegistryWrapper.WrapperLookup registryLookup) {
-        items.clear();
         super.readNbt(nbt, registryLookup);
-
-        Inventories.readNbt(nbt, items, registryLookup);
-        progress = nbt.getInt("fryer.progress");
+        this.progress = nbt.getInt("progress");
     }
 
     @Override
     public void writeNbt(NbtCompound nbt, RegistryWrapper.WrapperLookup registryLookup) {
-        Inventories.writeNbt(nbt, this.items, registryLookup);
-        nbt.putInt("fryer.progress", progress);
+        nbt.putInt("progress", progress);
         super.writeNbt(nbt, registryLookup);
     }
 
@@ -61,21 +53,16 @@ public class FryerEntity extends CookingBlockEntity implements ImplementedInvent
                 world.playSound(null, this.pos, SoundEvents.BLOCK_BUBBLE_COLUMN_UPWARDS_AMBIENT, SoundCategory.BLOCKS, 0.5f, 8.0f);
             if (this.progress % 30 == 1)
                 world.playSound(null, this.pos, SoundEvents.BLOCK_FIRE_AMBIENT, SoundCategory.BLOCKS, 0.5f, 1.0f);
-            if (this.items.get(0).isEmpty()) {
+            if (this.items.getFirst().isEmpty()) {
                 this.resetProgress();
                 world.setBlockState(pos, state.with(ON, false));
                 return;
             }
             world.setBlockState(pos, state.with(ON, true));
-
-//            if (progress == 0 || world.getTime() % Fryer_SOUND_INTERVAL == 0) {
-//                //playFryerSound(world, pos, state, true);
-//            }
             addParticles();
 
             this.updateMaxProgress();
             this.addProgress();
-            markDirty(world, pos, state);
 
             if (craftingFinished()) {
                 //playFryerSound(world, pos, state, false);
@@ -83,7 +70,6 @@ public class FryerEntity extends CookingBlockEntity implements ImplementedInvent
                 this.craftRecipe();
                 this.resetProgress();
                 this.markDirty();
-
             }
         } else {
             this.resetProgress();
@@ -92,8 +78,7 @@ public class FryerEntity extends CookingBlockEntity implements ImplementedInvent
 
     private void updateMaxProgress() {
         Optional<RecipeEntry<FryerRecipe>> recipe = getCurrentRecipe();
-
-        maxProgress = recipe.get().value().getMaxProgress();
+        recipe.ifPresent(fryerRecipeRecipeEntry -> this.maxProgress = fryerRecipeRecipeEntry.value().getMaxProgress());
     }
 
     private void craftRecipe() {
@@ -108,17 +93,15 @@ public class FryerEntity extends CookingBlockEntity implements ImplementedInvent
     }
 
     private void addParticles() {
-
         for (int i = 0; i < 3; i++) {
             Random random = new Random();
             double particleX = Math.round(((double)this.pos.getX() + 0.5 + random.nextFloat(-0.1875f,0.1875f)) * 100d) / 100d;
             double particleY = ((double)this.pos.getY() + 0.25);
             double particleZ = Math.round(((double)this.pos.getZ() + 0.5 + random.nextFloat(-0.1875f,0.1875f)) * 100d) / 100d;
-            assert world != null;
 
-            ((ServerWorld) world).spawnParticles(new OilParticleEffect(), particleX, particleY, particleZ, 2, 0.0,0.0f,0.0f,0f);
-            }
+            ((ServerWorld) Objects.requireNonNull(world)).spawnParticles(new OilParticleEffect(), particleX, particleY, particleZ, 2, 0,0,0,0);
         }
+    }
 
     private void resetProgress() {
         this.progress = 0;
@@ -129,7 +112,7 @@ public class FryerEntity extends CookingBlockEntity implements ImplementedInvent
     }
 
     private void addProgress() {
-        progress++;
+        this.progress++;
     }
 
     private boolean hasRecipe() {
@@ -138,7 +121,7 @@ public class FryerEntity extends CookingBlockEntity implements ImplementedInvent
     }
 
     private Optional<RecipeEntry<FryerRecipe>> getCurrentRecipe() {
-        RecipeInventory inv = new RecipeInventory(this.size());
+        RecipeInventory inv = new RecipeInventory(1);
         ItemStack item = getContainerItem(this.getStack(0));
         if (item.isEmpty()) {
             return Optional.empty();
@@ -149,23 +132,7 @@ public class FryerEntity extends CookingBlockEntity implements ImplementedInvent
     }
 
     public static ItemStack getContainerItem(ItemStack container) {
-
-        ComponentMap components = container.getComponents();
-        if (components != null && components.contains(CookItComponents.SINGLE_COOKING_COMPONENT)) {
-            return components.get(CookItComponents.SINGLE_COOKING_COMPONENT);
-        }
-        return ItemStack.EMPTY;
+        return container.getOrDefault(CookItComponents.SINGLE_COOKING_COMPONENT, SingleCookingComponent.DEFAULT).getItem();
     }
-
-//    private void playFryerSound(World world, BlockPos pos, BlockState state, boolean on) {
-//        if (on && !state.get(OPEN)) {
-//            world.playSound(null, pos, CookItSounds.Fryer_SOUND_EVENT, SoundCategory.BLOCKS, 0.3f, 1.0f);
-//            world.setBlockState(pos, state.with(Fryer.ON, true));
-//        } else {
-//            world.setBlockState(pos, state.with(ON, false));
-//            if (state.get(OPEN)) return;
-//            world.playSound(null, pos, CookItSounds.Fryer_BEEP_EVENT, SoundCategory.BLOCKS, 1.0f, 1.0f);
-//        }
-//    }
 }
 
